<resources>
    <string name="app_name">Service Novigrad</string>
    <!-- Strings related to login and register -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_branch_id">Branch ID (Optional)</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>
    <string name="customer">Customer</string>
    <string name="employee">Employee</string>

    <!-- Strings related to welcome screen -->
    <string name="welcome_banner">Welcome</string>
    <string name="TEST_USERNAME">TEST_USERNAME</string>

    <!-- Strings related to customer panel -->
    <string name="operating_hours">Operating Hours:</string>
    <string name="dash">-</string>

    <!-- Strings related to admin -->
    <string name="admin_panel_welcome">Service Novigrad Admin Panel</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="manage_services">Manage Services</string>
    <string name="title_activity_service_list">ServiceList</string>

    <!-- Strings related to services -->
    <string name="drivers_license">Driver\'s License</string>
    <string name="health_card">Health Card</string>
    <string name="photo_id">Photo ID</string>
    <string name="service_name">Enter service name</string>
    <string name="add_service">Add service</string>

    <!-- Strings related to employee panel -->
    <string name="add_services">Add Services</string>
    <string name="remove_services">Remove Services</string>
    <string name="edit_branch_info">Edit Branch Info</string>
    <string name="service_requests">Service Requests</string>
    <string name="branch_information">Branch Information</string>
    <string name="branch_management">Branch Management</string>
    <string name="working_hours">Working Hours</string>
    <!-- <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string> -->
    <string name="monday_to_friday">Monday to Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="opening">Opening</string>
    <string name="closing">Closing</string>
</resources>