<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user-input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prompt_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prompt_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/branchid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prompt_branch_id"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register-button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="120dp"
                android:text="@string/action_submit" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>