<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employee.BranchInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/branch" />

        <TextView
            android:id="@+id/branchInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/branch_information"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/branchID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="BRANCH_ID" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/branchPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:ems="10"
                    android:digits="0123456789+"
                    android:hint="Branch phone number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/branchEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:ems="10"
                    android:hint="Branch email address"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/workingHoursText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/working_hours"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weekdayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday_to_friday"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/weekdayOpening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opening" />

                    <ImageButton
                        android:id="@+id/weekdayOpeningButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="to" />

                    <TextView
                        android:id="@+id/weekdayClosing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closing" />

                    <ImageButton
                        android:id="@+id/weekdayClosingButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/saturdayOpening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opening" />

                    <ImageButton
                        android:id="@+id/saturdayOpeningButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="to" />

                    <TextView
                        android:id="@+id/saturdayClosing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closing" />

                    <ImageButton
                        android:id="@+id/saturdayClosingButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sundayOpening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/opening" />

                    <ImageButton
                        android:id="@+id/sundayOpeningButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="to" />

                    <TextView
                        android:id="@+id/sundayClosing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closing" />

                    <ImageButton
                        android:id="@+id/sundayClosingButton"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/edit" />

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/action_submit" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>